make jvm/natives.scala pass on JDK 24+